contentcuration/contentcuration/static/less/content-container.less
@import "global-variables.less";

@sidebar-width: 38px;
@container-width: 360px;
@container-height: 60vh; 
@container-min-height:400px;
@container-border-color: white;

@folder-gap-width: 35px;
@folder-color: white;
@folder-height: 120px; 
@title-size: 17px;
@highlighted-file: #B6B6B7;
@file-height:30px;
@description-font-size : 14px;

#container-wrapper{
	overflow:hidden; 
	overflow-x:auto;
	padding-top: 10px;
}

#edit, #preview{
	::-webkit-scrollbar {
		width: 12px;
		margin-left:-100px;
		position: absolute;
		display:none; /*remove this to add scrollbar back in*/
	}
	 
	::-webkit-scrollbar-track {
		-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
		border-radius: 10px;
	}
	 
	::-webkit-scrollbar-thumb {
		border-radius: 10px;
		-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
	}

	#hide_details_checkbox + label{
		color:white;
		font-size:15px;
	}


	.content-container{
		*{padding:0;margin:0;}
		padding:0;
		margin:0;
		
		width: @container-width + @folder-gap-width;
		display:inline-block;
		margin-right: -5px;

		.boundary{
			width:100%;
			height:4px;
			background-color:white;
			visibility:hidden;
		}

		
		h2{
			color:@container-border-color;
			font-size: @title-size * 1.5;
			padding-bottom: 10px;
			height: 3 * @title-size;
			width:100%;
			background-color:@body-background;
		}
		.container-interior{
			height:  @container-height;
			min-height: @container-min-height; 
			width:@container-width;
			border: 4px solid @container-border-color;
			background-color:@body-background;
			position:absolute;
			z-index:-100;
			canvas{
				height:100%;
				width: @sidebar-width;
			}
		}

		.content-list{
			width: @container-width + @folder-gap-width;
			height:@container-height * 0.95;
			min-height: @container-min-height * 0.95; 
			overflow-y: auto;
			overflow-x:hidden;
			padding:0;
			margin:0;
			margin-top:5px;
			z-index:150;
			padding-left: @sidebar-width / 4;
			position:absolute;

			input[type="radio"]{
				visibility:hidden;
				width:@sidebar-width / 1.5;
			}
			

			.default-item{
				font-style:italic;
				font-size: 18px;
				color:@container-border-color;
				margin-left:@sidebar-width + 10px;
			}
			li{
				margin-bottom: 10px;
				width: 100%;

				label{
					h3, h4, p{color : black;}
					vertical-align: middle;
					width: @container-width - @sidebar-width - 20px;
					background-color: @folder-color;
					cursor:pointer;
					overflow:hidden;

					padding: 5px;
					margin-left:10px;
					
					.glyphicon{
						font-size:@title-size * 1.2;
						margin-left:10px;
					}

					.filler, .minimize{
						font-weight:bold;
						font-style:italic;
						text-decoration:none;
					}

					h4{
						font-size: @title-size;
						padding:10px;
						width: @container-width - @sidebar-width - 60px;
					}
					h3{
						font-size: @title-size;
						padding-left: 10px;
						padding-bottom:10px;
						font-weight: bold;
						width: @container-width - @sidebar-width - 60px;
					}
					.description{
						font-size:@description-font-size;
						visibility:visible;
						padding-left:10px;
						word-wrap:break-word;
						a{text-decoration:none; color:black;}
						font-weight: normal;
						width: @container-width - @sidebar-width - 60px;
					}
					.filler{
						display:none;
					}
				}

				.file{
					height:@file-height;
					border-radius: 25px;
					.glyphicon{
						display:none;
					}
				}

				input[type=checkbox]:checked + .file,
				input[type=radio]:checked + .file,
				.file:hover{
					background-color: @highlighted-file;
				}

				.collapsed{
					height:@folder-height;
					.description{
						height: @description-font-size * 4;
					}
				}

				.expanded{
					height:auto;
					.description{
						height:auto;
					}
				}

				.hidden_details{
					height:@file-height;
					.options{
						width:65px;
					}
					.description{
						visibility:hidden;
					}
				}
				.editing{
					height:@folder-height;
				}


			}
			*[draggable=true] {
			  -moz-user-select:none;
			  -khtml-user-drag: element;
			  cursor: move;
			}


		}
	}

}

#edit{
	@edit-new-button-color: #A684C8;
	@edit-button-color: #3E5E9F;
	@edit-container-color: #CCCCCC;
	@edit-new-content-color: #89C0B1;

	#button_bar{
		margin-bottom: 15px;
		a{
			background-color: @edit-button-color;
			color: white;
			border: 3px solid white;
			width: 130px;
			font-size: 16px;
			padding:5px;
			margin-right: 15px;
			vertical-align:middle;
		}
	}

	.content-container{
		canvas{background-color: @edit-container-color;}
		.add_content_button{
			cursor:pointer;
			margin-left: @sidebar-width;
			width: @container-width - @sidebar-width - 20px;
			background-color: @edit-new-button-color;
			height: 35px;
			color:black;
			border:2px solid white;
			font-size: 14px;
		}

		input[type=checkbox]{
			display:inline-block;
			width:24px;
			height:24px;
			vertical-align:middle;
			margin-right:2px;
		}
		label{
			.options{
				height:100%;
				width:40px;
				.glyphicon{
					display:inline-block;
				}
				.disable-on-edit{
					visibility:hidden;
				}
			}

			.topic_textbox{
				width:95%;
				font-size: @title-size;
			}
			.topic_textarea{
				width:95%;
				resize:none;
			}
		}

		label :hover{
			.disable-on-edit{
				visibility:visible;
			}
		}
	}
}

#preview{
	@preview-container-color:#87A3C6;
	@preview-selected-folder:#204E4B;
	
	h1{font-size:20px;margin-bottom:20px;color:white;}
	.content-container{
		margin-right:-6px;
		canvas{background-color: @preview-container-color;}
		.glyphicon{
			display:none;
		}
	}
	.content-list{
		padding-left: 40px;
		.glyphicon{
			visibility:hidden;
		}
	}
}

